# C_homework_2

./: .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  README.md
.github/workflows/: build-and-lint.yml
src/CSV_pretty_printer/: CMakeLists.txt  README.md
src/CSV_pretty_printer/include/: csv.h
src/CSV_pretty_printer/src/: csv.c  main.c
src/CSV_pretty_printer/tests/: test_csv.c
